
(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** General ***

* Old-style inner comments (* ... *) within the term language are no
longer supported (legacy feature in Isabelle2018).

* Infix operators that begin or end with a "*" can now be paranthesized
without additional spaces, eg "(*)" instead of "( * )".


*** Isabelle/jEdit Prover IDE ***

* Improved sub-pixel font rendering (especially on Linux), thanks to
OpenJDK 11.


*** Isar ***

* More robust treatment of structural errors: begin/end blocks take
precedence over goal/proof.

* Implicit cases goal1, goal2, goal3, etc. have been discontinued
(legacy feature since Isabelle2016).


*** HOL ***

* Simplified syntax setup for big operators under image. In rare
situations, type conversions are not inserted implicitly any longer
and need to be given explicitly. Auxiliary abbreviations INFIMUM,
SUPREMUM, UNION, INTER should now rarely occur in output and are just
retained as migration auxiliary. INCOMPATIBILITY.

* Theory List: the precedence of the list_update operator has changed:
"f a [n := x]" now needs to be written "(f a)[n := x]".

* Theory "HOL-Library.Multiset": the <Union># operator now has the same
precedence as any other prefix function symbol.

* Facts sum_mset.commute and prod_mset.commute renamed to sum_mset.swap
and prod_mset.swap, similarly to sum.swap and prod.swap.
INCOMPATIBILITY.

* Strong congruence rules (with =simp=> in the premises) for constant f
are now uniformly called f_cong_strong. 

* Sledgehammer: The URL for SystemOnTPTP, which is used by remote
provers, has been updated.

* SMT: reconstruction is now possible using the SMT solver veriT.

* Session HOL-SPARK: .prv files are no longer written to the
file-system, but exported to the session database. Results may be
retrieved with the "isabelle export" command-line tool like this:

  isabelle export -x "*:**.prv" HOL-SPARK-Examples


*** ML ***
