@@ -175,12 +175,12 @@ struct
 
   fun ml_tactic source ctxt =
     let
-      val ctxt' = ctxt |> Context.proof_map
-        (ML_Context.expression ("tactic", Position.thread_data ()) "Proof.context -> tactic"
-          "Context.map_proof (ML_Tactic.set tactic)"
-          (ML_Lex.read "fn ctxt: Proof.context =>" @ ML_Lex.read_source source));
+      val ctxt' = ctxt
+        |> Context.proof_map (ML_Context.expression (Input.pos_of source)
+          (ML_Lex.read "Theory.local_setup (ML_Tactic.set (fn ctxt: Proof.context => (" @
+           ML_Lex.read_source source @ ML_Lex.read ")))"));
     in Data.get ctxt' ctxt end;
-end;
+end
 \<close>
 
 
