@@ -15,6 +15,10 @@ longer supported (legacy feature in Isabelle2018).
 * Infix operators that begin or end with a "*" can now be paranthesized
 without additional spaces, eg "(*)" instead of "( * )".
 
+* ML setup commands (e.g. 'setup', 'method_setup', 'parse_translation')
+need to provide a closed expression -- without trailing semicolon. Minor
+INCOMPATIBILITY.
+
 
 *** Isabelle/jEdit Prover IDE ***
 
